--- a/pusat/laporan/upload.html
+++ b/pusat/laporan/upload.html
@@ -302,7 +302,7 @@
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                             d="M5 13l4 4L19 7" />
                                     </svg>
-                                    Submit RTKN
+                                    Upload
                                 </button>
                             </div>
                         </form>
