--- a/pusat/susun/create.html
+++ b/pusat/susun/create.html
@@ -388,7 +388,7 @@
                     <div class="flex gap-4 pt-4">
                         <a href="./index.html"
                             class="flex-1 bg-gray-200 text-gray-700 px-6 py-3 rounded-lg font-medium hover:bg-gray-300 transition-colors text-center">
-                            Cancel
+                            Batal
                         </a>
                         <button type="submit"
                             class="flex-1 bg-indigo-600 text-white px-6 py-3 rounded-lg font-medium hover:bg-indigo-700 transition-colors">
@@ -396,7 +396,7 @@
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                     d="M5 13l4 4L19 7" />
                             </svg>
-                            Submit
+                            Tambah
                         </button>
                     </div>
                 </form>
