--- a/pusat/user/profile.html
+++ b/pusat/user/profile.html
@@ -362,8 +362,8 @@
                     <!-- Submit Button -->
                     <div class="mt-10 flex justify-end">
                         <button onclick="handleSubmit()"
-                            class="px-8 py-3.5 bg-indigo-600 hover:bg-indigo-700 text-white font-semibold rounded-xl shadow-lg hover:shadow-xl transition-all transform hover:scale-105">
-                            Submit
+                            class="px-8 py-3.5 bg-green-500 hover:bg-green-600 text-white font-semibold rounded-xl shadow-lg hover:shadow-xl transition-all transform hover:scale-105">
+                            Simpan
                         </button>
                     </div>
                 </div>
