--- a/superadmin/admin-pusat/index.html
+++ b/superadmin/admin-pusat/index.html
@@ -288,19 +288,30 @@
 
     <!-- Main Content -->
     <div class="p-4 sm:ml-64 mt-14">
-        <div class="p-4 md:p-6">
+        <div class="p-6">
 
-            <!-- Breadcrumb Navigation -->
-            <nav class="mb-6" aria-label="Breadcrumb">
-                <ol class="breadcrumb flex flex-wrap items-center text-sm text-gray-600">
-                    <li class="breadcrumb-item">
-                        <a href="../index.html" class="hover:text-indigo-600 transition-colors">
-                            <i class="fas fa-home mr-1"></i>
-                            Home
+                        <!-- Breadcrumb Navigation -->
+            <nav class="flex mb-6" aria-label="Breadcrumb">
+                <ol class="inline-flex items-center space-x-1">
+                    <li class="inline-flex items-center">
+                        <a href="../index.html"
+                            class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-indigo-600">
+                            <svg class="w-4 h-4 mr-2" fill="currentColor" viewBox="0 0 20 20">
+                                <path
+                                    d="M10.707 2.293a1 1 0 00-1.414 0l-7 7a1 1 0 001.414 1.414L4 10.414V17a1 1 0 001 1h2a1 1 0 001-1v-2a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 001 1h2a1 1 0 001-1v-6.586l.293.293a1 1 0 001.414-1.414l-7-7z">
+                                </path>
+                            </svg>
                         </a>
                     </li>
-                    <li class="breadcrumb-item">
-                        <span class="text-gray-900 font-medium">Manajemen Admin</span>
+                    <li>
+                        <div class="flex items-center">
+                            <svg class="w-6 h-6 text-gray-400" fill="currentColor" viewBox="0 0 20 20">
+                                <path fill-rule="evenodd"
+                                    d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
+                                    clip-rule="evenodd"></path>
+                            </svg>
+                            <a href="./index.html" class="ml-1 text-sm font-medium text-gray-700 hover:text-indigo-600 md:ml-2">Manajemen Admin</a>
+                        </div>
                     </li>
                 </ol>
             </nav>
