--- a/user/biasa/user/profile.html
+++ b/user/biasa/user/profile.html
@@ -159,18 +159,17 @@
     <!-- Main Content -->
     <div class="p-4 sm:ml-64 mt-14">
         <div class="p-6 max-w-7xl mx-auto">
-            <!-- Breadcrumb -->
-            <nav class="flex mb-3 aria-label=" Breadcrumb">
-                <ol class="inline-flex items-center space-x-1 md:space-x-3">
+                        <!-- Breadcrumb -->
+            <nav class="flex mb-6" aria-label="Breadcrumb">
+                <ol class="inline-flex items-center space-x-1">
                     <li class="inline-flex items-center">
                         <a href="../../index.html"
-                            class="inline-flex items-center text-sm font-medium text-gray-600 hover:text-indigo-600 transition-colors">
+                            class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-indigo-600">
                             <svg class="w-4 h-4 mr-2" fill="currentColor" viewBox="0 0 20 20">
                                 <path
                                     d="M10.707 2.293a1 1 0 00-1.414 0l-7 7a1 1 0 001.414 1.414L4 10.414V17a1 1 0 001 1h2a1 1 0 001-1v-2a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 001 1h2a1 1 0 001-1v-6.586l.293.293a1 1 0 001.414-1.414l-7-7z">
                                 </path>
                             </svg>
-                            Home
                         </a>
                     </li>
                     <li>
@@ -180,7 +179,7 @@
                                     d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
                                     clip-rule="evenodd"></path>
                             </svg>
-                            <span class="ml-1 text-sm font-medium text-gray-500 md:ml-2">Profile</span>
+                            <span class="ml-1 text-sm font-medium text-gray-700 md:ml-2">Profil</span>
                         </div>
                     </li>
                 </ol>
