--- a/kab-kota/user/profile.html
+++ b/kab-kota/user/profile.html
@@ -142,10 +142,10 @@
     </aside>
 
     <!-- Main Content -->
-    <div class="p-4 sm:ml-64 mt-14">
-        <div class="p-6 max-w-7xl mx-auto">
+    <div class="p-2 sm:p-3 sm:ml-64 mt-10">
+        <div class="p-4 sm:p-6">
             <!-- Breadcrumb -->
-            <nav class="flex mb-3" aria-label="Breadcrumb">
+            <nav class="flex mb-4" aria-label="Breadcrumb">
                 <ol class="inline-flex items-center space-x-1">
                     <li class="inline-flex items-center">
                         <a href="../index.html"
@@ -170,8 +170,8 @@
                 </ol>
             </nav>
 
-            <!-- Profil Card -->
-            <div class="bg-white rounded-2xl shadow-lg overflow-hidden border border-gray-100">
+            <!-- Profil Card - No card styling on mobile for more content space -->
+            <div class="sm:bg-white sm:rounded-2xl sm:shadow-lg overflow-hidden sm:border sm:border-gray-100">
                 <!-- Banner with Profil Picture -->
                 <div class="relative h-48">
                     <!-- Background Image - Replace src with your image -->
