--- a/superadmin/admin-pusat/edit.html
+++ b/superadmin/admin-pusat/edit.html
@@ -664,9 +664,7 @@
             });
 
             // Sidebar toggle
-            document.querySelector('[data-drawer-toggle="sidebar"]')?.addEventListener('click', function () {
-                document.getElementById('top-bar-sidebar').classList.toggle('-translate-x-full');
-            });
+            // Old sidebar toggle removed
 
             // Close dropdown when clicking outside
             document.addEventListener('click', function (event) {
@@ -927,7 +925,56 @@
                 return true;
             }
         });
+
     </script>
+
+    <script>
+        // Mobile Sidebar Toggle with Backdrop
+        (function() {
+            const sidebarToggleBtn = document.querySelector('[data-drawer-toggle="sidebar"]');
+            const sidebar = document.getElementById('top-bar-sidebar');
+
+            if (!sidebarToggleBtn || !sidebar) {
+                console.warn('Sidebar elements not found');
+                return;
+            }
+
+            // Create backdrop element
+            const backdrop = document.createElement('div');
+            backdrop.className = 'fixed inset-0 bg-gray-900 bg-opacity-50 z-30 hidden';
+            backdrop.id = 'sidebar-backdrop';
+            document.body.appendChild(backdrop);
+
+            // Toggle sidebar and backdrop
+            function toggleSidebar() {
+                sidebar.classList.toggle('-translate-x-full');
+                backdrop.classList.toggle('hidden');
+            }
+
+            sidebarToggleBtn.addEventListener('click', function (e) {
+                e.stopPropagation();
+                toggleSidebar();
+            });
+
+            // Close sidebar when clicking backdrop
+            backdrop.addEventListener('click', function () {
+                toggleSidebar();
+            });
+
+            // Close sidebar when clicking outside on mobile
+            document.addEventListener('click', function (event) {
+                if (window.innerWidth < 640) {
+                    const isClickInsideSidebar = sidebar.contains(event.target);
+                    const isClickOnToggleBtn = sidebarToggleBtn.contains(event.target);
+
+                    if (!isClickInsideSidebar && !isClickOnToggleBtn && !sidebar.classList.contains('-translate-x-full')) {
+                        toggleSidebar();
+                    }
+                }
+            });
+        })();
+    </script>
+
 </body>
 
 </html>
