--- a/superadmin/support/help.html
+++ b/superadmin/support/help.html
@@ -180,7 +180,7 @@
     </div>
     <script>
         document.querySelector('[data-dropdown-toggle="dropdown-user"]')?.addEventListener('click', () => document.getElementById('dropdown-user').classList.toggle('hidden'));
-        document.querySelector('[data-drawer-toggle="sidebar"]')?.addEventListener('click', () => document.getElementById('sidebar').classList.toggle('-translate-x-full'));
+        // Old sidebar toggle removed
         document.addEventListener('click', (e) => { const d = document.getElementById('dropdown-user'), b = document.querySelector('[data-dropdown-toggle="dropdown-user"]'); if (d && b && !b.contains(e.target) && !d.contains(e.target)) d.classList.add('hidden'); });
 
         // Toggle Pelaporan dropdown
@@ -190,7 +190,56 @@
             dropdown.classList.toggle('hidden');
             arrow?.classList.toggle('rotate-180');
         });
+
     </script>
+
+    <script>
+        // Mobile Sidebar Toggle with Backdrop
+        (function() {
+            const sidebarToggleBtn = document.querySelector('[data-drawer-toggle="sidebar"]');
+            const sidebar = document.getElementById('top-bar-sidebar');
+
+            if (!sidebarToggleBtn || !sidebar) {
+                console.warn('Sidebar elements not found');
+                return;
+            }
+
+            // Create backdrop element
+            const backdrop = document.createElement('div');
+            backdrop.className = 'fixed inset-0 bg-gray-900 bg-opacity-50 z-30 hidden';
+            backdrop.id = 'sidebar-backdrop';
+            document.body.appendChild(backdrop);
+
+            // Toggle sidebar and backdrop
+            function toggleSidebar() {
+                sidebar.classList.toggle('-translate-x-full');
+                backdrop.classList.toggle('hidden');
+            }
+
+            sidebarToggleBtn.addEventListener('click', function (e) {
+                e.stopPropagation();
+                toggleSidebar();
+            });
+
+            // Close sidebar when clicking backdrop
+            backdrop.addEventListener('click', function () {
+                toggleSidebar();
+            });
+
+            // Close sidebar when clicking outside on mobile
+            document.addEventListener('click', function (event) {
+                if (window.innerWidth < 640) {
+                    const isClickInsideSidebar = sidebar.contains(event.target);
+                    const isClickOnToggleBtn = sidebarToggleBtn.contains(event.target);
+
+                    if (!isClickInsideSidebar && !isClickOnToggleBtn && !sidebar.classList.contains('-translate-x-full')) {
+                        toggleSidebar();
+                    }
+                }
+            });
+        })();
+    </script>
+
 </body>
 
 </html>
