--- a/user/biasa/courses/my-courses.html
+++ b/user/biasa/courses/my-courses.html
@@ -496,6 +496,44 @@
         document.querySelector('[data-dropdown-toggle="dropdown-user"]')?.addEventListener('click', function () {
             document.getElementById('dropdown-user').classList.toggle('hidden');
         });
+        // Sidebar toggle with backdrop
+        const sidebarToggleBtn = document.querySelector('[data-drawer-toggle="top-bar-sidebar"]');
+        const sidebar = document.getElementById('top-bar-sidebar');
+
+        // Create backdrop element
+        const backdrop = document.createElement('div');
+        backdrop.className = 'fixed inset-0 bg-gray-900 bg-opacity-50 z-30 hidden';
+        backdrop.id = 'sidebar-backdrop';
+        document.body.appendChild(backdrop);
+
+        // Toggle sidebar and backdrop
+        function toggleSidebar() {
+            sidebar.classList.toggle('-translate-x-full');
+            backdrop.classList.toggle('hidden');
+        }
+
+        sidebarToggleBtn?.addEventListener('click', function (e) {
+            e.stopPropagation();
+            toggleSidebar();
+        });
+
+        // Close sidebar when clicking backdrop
+        backdrop.addEventListener('click', function () {
+            toggleSidebar();
+        });
+
+        // Close sidebar when clicking outside on mobile
+        document.addEventListener('click', function (event) {
+            if (window.innerWidth < 640) { // sm breakpoint
+                const isClickInsideSidebar = sidebar.contains(event.target);
+                const isClickOnToggleBtn = sidebarToggleBtn?.contains(event.target);
+
+                if (!isClickInsideSidebar && !isClickOnToggleBtn && !sidebar.classList.contains('-translate-x-full')) {
+                    toggleSidebar();
+                }
+            }
+        });
+
 
         // Toggle Perhitungan dropdown
         document.querySelector('[data-dropdown-toggle="dropdown-perhitungan"]')?.addEventListener('click', function () {
@@ -505,10 +543,7 @@
             arrow?.classList.toggle('rotate-180');
         });
 
-        // Toggle sidebar
-        document.querySelector('[data-drawer-toggle="sidebar"]')?.addEventListener('click', function () {
-            document.getElementById('sidebar').classList.toggle('-translate-x-full');
-        });
+        
 
         // Close dropdown when clicking outside
         document.addEventListener('click', function (event) {
