--- a/user/biasa/support/help.html
+++ b/user/biasa/support/help.html
@@ -128,13 +128,13 @@
                         <li>
                             <a href="../../tim/perhitungan.html"
                                 class="flex items-center w-full px-2 py-1.5 ps-10 text-gray-500 rounded-lg hover:bg-purple-100 hover:text-indigo-600 transition-colors">
-                                Daftar
+                                Kalkulator RTK
                             </a>
                         </li>
                         <li>
                             <a href="../../tim/draft.html"
                                 class="flex items-center w-full px-2 py-1.5 ps-10 text-gray-500 rounded-lg hover:bg-purple-100 hover:text-indigo-600 transition-colors">
-                                Draft
+                                Draft RTK
                             </a>
                         </li>
                     </ul>
@@ -155,7 +155,7 @@
     </aside>
     <div class="p-4 sm:ml-64 mt-14">
         <div class="p-6">
-                        <!-- Breadcrumb -->
+            <!-- Breadcrumb -->
             <nav class="flex mb-6" aria-label="Breadcrumb">
                 <ol class="inline-flex items-center space-x-1">
                     <li class="inline-flex items-center">
@@ -236,6 +236,68 @@
         </div>
     </div>
 
+    <script>
+        // Toggle dropdown user
+        document.querySelector('[data-dropdown-toggle="dropdown-user"]')?.addEventListener('click', function (e) {
+            e.stopPropagation();
+            document.getElementById('dropdown-user').classList.toggle('hidden');
+        });
+
+        // Close dropdown when clicking outside
+        document.addEventListener('click', function (e) {
+            const dropdown = document.getElementById('dropdown-user');
+            const button = document.querySelector('[data-dropdown-toggle="dropdown-user"]');
+            if (dropdown && !dropdown.classList.contains('hidden') && !button.contains(e.target)) {
+                dropdown.classList.add('hidden');
+            }
+        });
+
+        // Sidebar toggle with backdrop
+        const sidebarToggleBtn = document.querySelector('[data-drawer-toggle="top-bar-sidebar"]');
+        const sidebar = document.getElementById('top-bar-sidebar');
+
+        // Create backdrop element
+        const backdrop = document.createElement('div');
+        backdrop.className = 'fixed inset-0 bg-gray-900 bg-opacity-50 z-30 hidden';
+        backdrop.id = 'sidebar-backdrop';
+        document.body.appendChild(backdrop);
+
+        // Toggle sidebar and backdrop
+        function toggleSidebar() {
+            sidebar.classList.toggle('-translate-x-full');
+            backdrop.classList.toggle('hidden');
+        }
+
+        sidebarToggleBtn?.addEventListener('click', function (e) {
+            e.stopPropagation();
+            toggleSidebar();
+        });
+
+        // Close sidebar when clicking backdrop
+        backdrop.addEventListener('click', function () {
+            toggleSidebar();
+        });
+
+        // Close sidebar when clicking outside on mobile
+        document.addEventListener('click', function (event) {
+            if (window.innerWidth < 640) { // sm breakpoint
+                const isClickInsideSidebar = sidebar.contains(event.target);
+                const isClickOnToggleBtn = sidebarToggleBtn?.contains(event.target);
+
+                if (!isClickInsideSidebar && !isClickOnToggleBtn && !sidebar.classList.contains('-translate-x-full')) {
+                    toggleSidebar();
+                }
+            }
+        });
+
+        // Toggle Perhitungan dropdown
+        document.querySelector('[data-dropdown-toggle="dropdown-perhitungan"]')?.addEventListener('click', function () {
+            const dropdown = document.getElementById('dropdown-perhitungan');
+            const arrow = this.querySelector('.dropdown-arrow');
+            dropdown.classList.toggle('hidden');
+            arrow?.classList.toggle('rotate-180');
+        });
+    </script>
 </body>
 
 </html>
