--- a/user/index.html
+++ b/user/index.html
@@ -170,11 +170,11 @@
     </aside>
 
     <!-- Main Content -->
-    <div class="p-4 sm:ml-64 mt-14">
-        <div class="p-6">
+    <div class="p-2 sm:p-4 sm:ml-64 mt-16">
+        <div class="p-2 sm:p-6">
 
-                        <!-- Breadcrumb -->
-            <nav class="flex mb-6" aria-label="Breadcrumb">
+            <!-- Breadcrumb -->
+            <nav class="flex mb-4 sm:mb-6" aria-label="Breadcrumb">
                 <ol class="inline-flex items-center space-x-1">
                     <li class="inline-flex items-center">
                         <a href="./index.html"
@@ -200,16 +200,17 @@
             </nav>
 
             <!-- Stats Grid -->
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-6">
+            <div class="grid grid-cols-3 gap-2 sm:gap-4 mb-4 sm:mb-6">
                 <div
-                    class="bg-white rounded-lg p-5 shadow-sm border-l-4 border-indigo-500 transition-all duration-300 hover:translate-x-1">
+                    class="bg-white rounded-lg p-3 sm:p-5 shadow-sm border-l-4 border-indigo-500 transition-all duration-300 hover:translate-x-1">
                     <div class="flex items-center justify-between">
                         <div>
-                            <p class="text-gray-500 text-sm font-medium mb-1">Kursus Aktif</p>
-                            <h3 class="text-3xl font-bold text-gray-900">6</h3>
+                            <p class="text-gray-500 text-xs sm:text-sm font-medium mb-1">Kursus Aktif</p>
+                            <h3 class="text-xl sm:text-3xl font-bold text-gray-900">6</h3>
                         </div>
-                        <div class="bg-indigo-100 p-3 rounded-full">
-                            <svg class="w-8 h-8 text-indigo-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <div class="bg-indigo-100 p-2 sm:p-3 rounded-full">
+                            <svg class="w-5 h-5 sm:w-8 sm:h-8 text-indigo-600" fill="none" stroke="currentColor"
+                                viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                     d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253" />
                             </svg>
@@ -218,14 +219,15 @@
                 </div>
 
                 <div
-                    class="bg-white rounded-lg p-5 shadow-sm border-l-4 border-emerald-500 transition-all duration-300 hover:translate-x-1">
+                    class="bg-white rounded-lg p-3 sm:p-5 shadow-sm border-l-4 border-emerald-500 transition-all duration-300 hover:translate-x-1">
                     <div class="flex items-center justify-between">
                         <div>
-                            <p class="text-gray-500 text-sm font-medium mb-1">Jam Pelajaran</p>
-                            <h3 class="text-3xl font-bold text-gray-900">24</h3>
+                            <p class="text-gray-500 text-xs sm:text-sm font-medium mb-1">Jam Pelajaran</p>
+                            <h3 class="text-xl sm:text-3xl font-bold text-gray-900">24</h3>
                         </div>
-                        <div class="bg-emerald-100 p-3 rounded-full">
-                            <svg class="w-8 h-8 text-emerald-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <div class="bg-emerald-100 p-2 sm:p-3 rounded-full">
+                            <svg class="w-5 h-5 sm:w-8 sm:h-8 text-emerald-600" fill="none" stroke="currentColor"
+                                viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                     d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
                             </svg>
@@ -234,14 +236,15 @@
                 </div>
 
                 <div
-                    class="bg-white rounded-lg p-5 shadow-sm border-l-4 border-amber-500 transition-all duration-300 hover:translate-x-1">
+                    class="bg-white rounded-lg p-3 sm:p-5 shadow-sm border-l-4 border-amber-500 transition-all duration-300 hover:translate-x-1">
                     <div class="flex items-center justify-between">
                         <div>
-                            <p class="text-gray-500 text-sm font-medium mb-1">Sertifikat</p>
-                            <h3 class="text-3xl font-bold text-gray-900">3</h3>
+                            <p class="text-gray-500 text-xs sm:text-sm font-medium mb-1">Sertifikat</p>
+                            <h3 class="text-xl sm:text-3xl font-bold text-gray-900">3</h3>
                         </div>
-                        <div class="bg-amber-100 p-3 rounded-full">
-                            <svg class="w-8 h-8 text-amber-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <div class="bg-amber-100 p-2 sm:p-3 rounded-full">
+                            <svg class="w-5 h-5 sm:w-8 sm:h-8 text-amber-600" fill="none" stroke="currentColor"
+                                viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                     d="M9 12l2 2 4-4M7.835 4.697a3.42 3.42 0 001.946-.806 3.42 3.42 0 014.438 0 3.42 3.42 0 001.946.806 3.42 3.42 0 013.138 3.138 3.42 3.42 0 00.806 1.946 3.42 3.42 0 010 4.438 3.42 3.42 0 00-.806 1.946 3.42 3.42 0 01-3.138 3.138 3.42 3.42 0 00-1.946.806 3.42 3.42 0 01-4.438 0 3.42 3.42 0 00-1.946-.806 3.42 3.42 0 01-3.138-3.138 3.42 3.42 0 00-.806-1.946 3.42 3.42 0 010-4.438 3.42 3.42 0 00.806-1.946 3.42 3.42 0 013.138-3.138z" />
                             </svg>
@@ -251,54 +254,56 @@
             </div>
 
             <!-- Grid Layout -->
-            <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
+            <div class="grid grid-cols-1 lg:grid-cols-2 gap-4 sm:gap-6">
                 <!-- Left Column -->
-                <div class="space-y-6">
-                    <div class="bg-white rounded-lg p-6 shadow-sm">
-                        <h2 class="text-xl font-bold text-gray-900 mb-4">Lanjutkan Belajar</h2>
-                        <div class="bg-gradient-to-r from-blue-600 to-indigo-600 rounded-lg p-6 text-white">
-                            <div class="flex items-center justify-between mb-4">
-                                <div>
-                                    <p class="text-sm text-blue-100 mb-1">Terakhir diakses</p>
-                                    <h3 class="text-xl font-bold">Indeks Pembangunan Ketenagakerjaan</h3>
+                <div class="space-y-4 sm:space-y-6">
+                    <div class="sm:bg-white rounded-lg p-3 sm:p-6 sm:shadow-sm">
+                        <h2 class="text-lg sm:text-xl font-bold text-gray-900 mb-3 sm:mb-4">Lanjutkan Belajar</h2>
+                        <div class="bg-gradient-to-r from-blue-600 to-indigo-600 rounded-lg p-4 sm:p-6 text-white">
+                            <div class="flex items-center justify-between mb-3 sm:mb-4">
+                                <div class="flex-1 min-w-0 mr-2">
+                                    <p class="text-xs sm:text-sm text-blue-100 mb-1">Terakhir diakses</p>
+                                    <h3 class="text-sm sm:text-xl font-bold truncate">Indeks Pembangunan Ketenagakerjaan
+                                    </h3>
                                 </div>
-                                <div class="bg-white/20 backdrop-blur-sm rounded-lg px-4 py-2">
-                                    <p class="text-2xl font-bold">33%</p>
-                                    <p class="text-xs">Selesai</p>
+                                <div
+                                    class="bg-white/20 backdrop-blur-sm rounded-lg px-2 sm:px-4 py-1 sm:py-2 flex-shrink-0">
+                                    <p class="text-lg sm:text-2xl font-bold">33%</p>
+                                    <p class="text-xs hidden sm:block">Selesai</p>
                                 </div>
                             </div>
-                            <div class="w-full bg-blue-400/30 rounded-full h-2 mb-4">
+                            <div class="w-full bg-blue-400/30 rounded-full h-2 mb-3 sm:mb-4">
                                 <div class="bg-white rounded-full h-2 transition-all duration-300" style="width: 33%">
                                 </div>
                             </div>
                             <button
-                                class="bg-white text-indigo-600 px-6 py-2 rounded-lg font-semibold hover:bg-indigo-50 transition-colors">
-                                Lanjutkan Belajar →
+                                class="bg-white text-indigo-600 px-4 sm:px-6 py-2 rounded-lg font-semibold hover:bg-indigo-50 transition-colors text-sm sm:text-base w-full sm:w-auto">
+                                Lanjutkan →
                             </button>
                         </div>
                     </div>
                 </div>
 
                 <!-- Right Column -->
-                <div class="space-y-6">
+                <div class="space-y-4 sm:space-y-6">
                     <!-- My Courses -->
-                    <div class="bg-white rounded-lg p-6 shadow-sm">
-                        <h2 class="text-xl font-bold text-gray-900 mb-4">Kursus Saya</h2>
-                        <div class="space-y-4">
+                    <div class="sm:bg-white rounded-lg p-3 sm:p-6 sm:shadow-sm">
+                        <h2 class="text-lg sm:text-xl font-bold text-gray-900 mb-3 sm:mb-4">Kursus Saya</h2>
+                        <div class="space-y-3 sm:space-y-4">
                             <div
-                                class="border border-gray-200 rounded-lg p-4 transition-all duration-300 hover:-translate-y-1 hover:shadow-[0_12px_24px_-8px_rgba(99,102,241,0.3)] hover:border-indigo-500">
-                                <div class="flex gap-4">
+                                class="bg-white sm:bg-transparent border border-gray-200 rounded-lg p-3 sm:p-4 transition-all duration-300 hover:-translate-y-1 hover:shadow-[0_12px_24px_-8px_rgba(99,102,241,0.3)] hover:border-indigo-500">
+                                <div class="flex gap-3 sm:gap-4">
                                     <img src="https://picsum.photos/seed/ipk/120/80" alt="Course"
-                                        class="w-20 h-20 rounded-lg object-cover">
-                                    <div class="flex-1">
+                                        class="w-14 h-14 sm:w-20 sm:h-20 rounded-lg object-cover flex-shrink-0">
+                                    <div class="flex-1 min-w-0">
                                         <div class="flex items-start justify-between mb-2">
-                                            <div>
-                                                <h3 class="font-semibold text-gray-900">Indeks Pembangunan
-                                                    Ketenagakerjaan</h3>
+                                            <div class="min-w-0 flex-1">
+                                                <h3 class="font-semibold text-gray-900 text-sm sm:text-base truncate">
+                                                    Indeks Pembangunan Ketenagakerjaan</h3>
                                                 <p class="text-xs text-gray-500">1 dari 3 modul</p>
                                             </div>
                                             <span
-                                                class="inline-flex items-center justify-center w-32 px-2.5 py-0.5 rounded-full text-xs font-semibold bg-purple-100 text-indigo-600">
+                                                class="hidden sm:inline-flex items-center justify-center w-32 px-2.5 py-0.5 rounded-full text-xs font-semibold bg-purple-100 text-indigo-600 flex-shrink-0 ml-2">
                                                 Sedang Berjalan
                                             </span>
                                         </div>
@@ -311,18 +316,19 @@
                             </div>
 
                             <div
-                                class="border border-gray-200 rounded-lg p-4 transition-all duration-300 hover:-translate-y-1 hover:shadow-[0_12px_24px_-8px_rgba(99,102,241,0.3)] hover:border-indigo-500">
-                                <div class="flex gap-4">
+                                class="bg-white sm:bg-transparent border border-gray-200 rounded-lg p-3 sm:p-4 transition-all duration-300 hover:-translate-y-1 hover:shadow-[0_12px_24px_-8px_rgba(99,102,241,0.3)] hover:border-indigo-500">
+                                <div class="flex gap-3 sm:gap-4">
                                     <img src="https://picsum.photos/seed/macro-adv/120/80" alt="Course"
-                                        class="w-20 h-20 rounded-lg object-cover">
-                                    <div class="flex-1">
+                                        class="w-14 h-14 sm:w-20 sm:h-20 rounded-lg object-cover flex-shrink-0">
+                                    <div class="flex-1 min-w-0">
                                         <div class="flex items-start justify-between mb-2">
-                                            <div>
-                                                <h3 class="font-semibold text-gray-900">PTK Makro (Advanced)</h3>
+                                            <div class="min-w-0 flex-1">
+                                                <h3 class="font-semibold text-gray-900 text-sm sm:text-base truncate">
+                                                    PTK Makro (Advanced)</h3>
                                                 <p class="text-xs text-gray-500">2 dari 8 modul</p>
                                             </div>
                                             <span
-                                                class="inline-flex items-center justify-center w-32 px-2.5 py-0.5 rounded-full text-xs font-semibold bg-purple-100 text-indigo-600">
+                                                class="hidden sm:inline-flex items-center justify-center w-32 px-2.5 py-0.5 rounded-full text-xs font-semibold bg-purple-100 text-indigo-600 flex-shrink-0 ml-2">
                                                 Sedang Berjalan
                                             </span>
                                         </div>
@@ -335,19 +341,19 @@
                             </div>
 
                             <div
-                                class="border border-gray-200 rounded-lg p-4 transition-all duration-300 hover:-translate-y-1 hover:shadow-[0_12px_24px_-8px_rgba(99,102,241,0.3)] hover:border-indigo-500">
-                                <div class="flex gap-4">
+                                class="bg-white sm:bg-transparent border border-gray-200 rounded-lg p-3 sm:p-4 transition-all duration-300 hover:-translate-y-1 hover:shadow-[0_12px_24px_-8px_rgba(99,102,241,0.3)] hover:border-indigo-500">
+                                <div class="flex gap-3 sm:gap-4">
                                     <img src="https://picsum.photos/seed/macro/120/80" alt="Course"
-                                        class="w-20 h-20 rounded-lg object-cover">
-                                    <div class="flex-1">
+                                        class="w-14 h-14 sm:w-20 sm:h-20 rounded-lg object-cover flex-shrink-0">
+                                    <div class="flex-1 min-w-0">
                                         <div class="flex items-start justify-between mb-2">
-                                            <div>
-                                                <h3 class="font-semibold text-gray-900">Perencanaan Tenaga Kerja Makro
-                                                </h3>
+                                            <div class="min-w-0 flex-1">
+                                                <h3 class="font-semibold text-gray-900 text-sm sm:text-base truncate">
+                                                    Perencanaan Tenaga Kerja Makro</h3>
                                                 <p class="text-xs text-gray-500">8 dari 8 modul</p>
                                             </div>
                                             <span
-                                                class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-semibold bg-emerald-100 text-emerald-600">
+                                                class="hidden sm:inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-semibold bg-emerald-100 text-emerald-600 flex-shrink-0 ml-2">
                                                 Selesai
                                             </span>
                                         </div>
